# openapi/src/main/kotlin/com/rizalanggoro/presensigo/openapi/models/GetAllGeneralAttendancesStudentItem.kt
@@ -1,0 +1,43 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package com.rizalanggoro.presensigo.openapi.models
+
+import com.rizalanggoro.presensigo.openapi.models.DomainsGeneralAttendanceRecord
+import com.rizalanggoro.presensigo.openapi.models.GeneralAttendance
+
+import com.google.gson.annotations.SerializedName
+
+/**
+ * 
+ *
+ * @param generalAttendance 
+ * @param generalAttendanceRecord 
+ */
+
+
+data class GetAllGeneralAttendancesStudentItem (
+
+    @SerializedName("general_attendance")
+    val generalAttendance: GeneralAttendance,
+
+    @SerializedName("general_attendance_record")
+    val generalAttendanceRecord: DomainsGeneralAttendanceRecord
+
+) {
+
+
+}
+
