# openapi/src/main/kotlin/com/rizalanggoro/presensigo/openapi/models/GetAllSubjectAttendancesStudentItem.kt
@@ -1,0 +1,48 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package com.rizalanggoro.presensigo.openapi.models
+
+import com.rizalanggoro.presensigo.openapi.models.DomainsSubjectAttendanceRecord
+import com.rizalanggoro.presensigo.openapi.models.Subject
+import com.rizalanggoro.presensigo.openapi.models.SubjectAttendance
+
+import com.google.gson.annotations.SerializedName
+
+/**
+ * 
+ *
+ * @param subject 
+ * @param subjectAttendance 
+ * @param subjectAttendanceRecord 
+ */
+
+
+data class GetAllSubjectAttendancesStudentItem (
+
+    @SerializedName("subject")
+    val subject: Subject,
+
+    @SerializedName("subject_attendance")
+    val subjectAttendance: SubjectAttendance,
+
+    @SerializedName("subject_attendance_record")
+    val subjectAttendanceRecord: DomainsSubjectAttendanceRecord
+
+) {
+
+
+}
+
