# openapi/src/main/kotlin/com/rizalanggoro/presensigo/openapi/models/GetAllSubjectAttendancesStudentRes.kt
@@ -1,0 +1,38 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package com.rizalanggoro.presensigo.openapi.models
+
+import com.rizalanggoro.presensigo.openapi.models.GetAllSubjectAttendancesStudentItem
+
+import com.google.gson.annotations.SerializedName
+
+/**
+ * 
+ *
+ * @param items 
+ */
+
+
+data class GetAllSubjectAttendancesStudentRes (
+
+    @SerializedName("items")
+    val items: kotlin.collections.List<GetAllSubjectAttendancesStudentItem>
+
+) {
+
+
+}
+
