# swagger.json
@@ -1274,6 +1274,22 @@
                 }
             }
         },
+        "/api/v1/general-attendances/student": {
+            "get": {
+                "tags": [
+                    "attendance"
+                ],
+                "operationId": "GetAllGeneralAttendancesStudent",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/GetAllGeneralAttendancesStudentRes"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/general-attendances/{general_attendance_id}": {
             "get": {
                 "tags": [
@@ -1575,6 +1591,22 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/responses.CreateSubjectAttendanceRecordStudent"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/subject-attendances/student": {
+            "get": {
+                "tags": [
+                    "attendance"
+                ],
+                "operationId": "GetAllSubjectAttendancesStudent",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/GetAllSubjectAttendancesStudentRes"
                         }
                     }
                 }
@@ -1966,6 +1998,35 @@
                 }
             }
         },
+        "GetAllGeneralAttendancesStudentItem": {
+            "type": "object",
+            "required": [
+                "general_attendance",
+                "general_attendance_record"
+            ],
+            "properties": {
+                "general_attendance": {
+                    "$ref": "#/definitions/GeneralAttendance"
+                },
+                "general_attendance_record": {
+                    "$ref": "#/definitions/domains.GeneralAttendanceRecord"
+                }
+            }
+        },
+        "GetAllGeneralAttendancesStudentRes": {
+            "type": "object",
+            "required": [
+                "items"
+            ],
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/GetAllGeneralAttendancesStudentItem"
+                    }
+                }
+            }
+        },
         "GetAllMajorsByBatchIdItem": {
             "type": "object",
             "required": [
@@ -2067,6 +2128,39 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/GetAllSubjectAttendancesItem"
+                    }
+                }
+            }
+        },
+        "GetAllSubjectAttendancesStudentItem": {
+            "type": "object",
+            "required": [
+                "subject",
+                "subject_attendance",
+                "subject_attendance_record"
+            ],
+            "properties": {
+                "subject": {
+                    "$ref": "#/definitions/Subject"
+                },
+                "subject_attendance": {
+                    "$ref": "#/definitions/SubjectAttendance"
+                },
+                "subject_attendance_record": {
+                    "$ref": "#/definitions/domains.SubjectAttendanceRecord"
+                }
+            }
+        },
+        "GetAllSubjectAttendancesStudentRes": {
+            "type": "object",
+            "required": [
+                "items"
+            ],
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/GetAllSubjectAttendancesStudentItem"
                     }
                 }
             }
